<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity"
    android:background="@color/latar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                    android:id="@+id/textactivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/activitytext"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/button"
                    android:layout_marginTop="30dp"/>
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/penjelasanactivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="0dp"
                android:text="@string/penjelasanA"
                android:textColor="@color/button"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/webA_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:text="@string/link_activity"/>
            <Button
                android:id="@+id/open_website_activity"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/button"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="24dp"
                android:text="@string/openweb"
                android:onClick="openWebA"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                tools:ignore="OnClick"/>

            <Button
                android:id="@+id/activitycontoh"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/button"
                android:text="@string/contoh_syntax"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>